Create Global Handlers

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <body>
     <h3>Simple Ajax Get</h3>
     <div id='container'>
+      <!-- Ajax Loading Spinner-->
+      <div id="ajaxSpinnerContainer" class='centered'>
+        <img src="images/ajax-loader.gif" id="ajaxSpinnerImage" title="working...\">
+      </div>    
+      
       <button id='get-articles'>Get Articles</button>
       <ul id='articles'>Articles
       </ul>
