Add a Article count. Will not work because of async ajax. Fix later in lesson.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h3>Article Blog Ajax Get</h3>
     <div id='container'>
       <button id='get-articles'>Get Articles</button>
+      <div id='article-count'>
+      </div>
       <ul id='articles'>Articles
       </ul>
     </div>
