--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <img src="images/ajax-loader.gif" id="ajaxSpinnerImage" title="working...\">
       </div>   
       
+       <!-- Create a new Article -->
+      <form id='new-article' action='http://localhost:3000/articles'>
+        <input type='text' name='title'placeholder="Enter new title">
+        <input type='textarea' name='body' placeholder="Enter new contents">
+        <input type='submit' value='Create Article'>
+      </form>
+
       <button id='get-articles'>Get Articles</button>
       <div id='article-count'>
       </div>
