--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <link href="css/simple.css" rel="stylesheet" type="text/css" media="all">
     <script src='js/jquery.js'></script>
     <script src='js/ajax_globals_done.js'></script>
-    <script src='js/article.js'></script>    
-    <script src='js/article_list.js'></script>    
-    <script src='js/main.js'></script>    
+    <script src='js/article.js'></script>
+    <script src='js/article_list.js'></script>
+    <script src='js/main.js'></script>
   </head>
   <body>
     <h3>Article Blog Ajax Get</h3>
@@ -14,20 +14,21 @@
       <!-- Ajax Loading Spinner-->
       <div id="ajaxSpinnerContainer" class='centered'>
         <img src="images/ajax-loader.gif" id="ajaxSpinnerImage" title="working...\">
-      </div>   
-      
+      </div>
+
        <!-- Create a new Article -->
       <form id='new-article' action='http://localhost:3000/articles'>
         <input type='text' name='title'placeholder="Enter new title">
         <input type='textarea' name='body' placeholder="Enter new contents">
         <input type='submit' value='Create Article'>
       </form>
-
       <button id='get-articles'>Get Articles</button>
       <div id='article-count'>
       </div>
-      <ul id='articles'>Articles
-      </ul>
+     <!--  <ul id='articles'>Articles
+      </ul> -->
+      <div id="articles">
+      </div>
     </div>
   </body>
 </html>
