--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <html>
   <head>
     <link href="css/simple.css" rel="stylesheet" type="text/css" media="all">
-    <script src='js/jquery.js'></script>
-    <script src='js/ajax_globals_done.js'></script>
-    <script src='js/article.js'></script>    
-    <script src='js/article_list.js'></script>    
-    <script src='js/main.js'></script>    
+
   </head>
   <body>
     <h3>Article Blog Ajax Get</h3>
@@ -14,8 +10,8 @@
       <!-- Ajax Loading Spinner-->
       <div id="ajaxSpinnerContainer" class='centered'>
         <img src="images/ajax-loader.gif" id="ajaxSpinnerImage" title="working...\">
-      </div>   
-      
+      </div>
+
        <!-- Create a new Article -->
       <form id='new-article' action='http://localhost:3000/articles'>
         <input type='text' name='title'placeholder="Enter new title">
@@ -26,8 +22,13 @@
       <button id='get-articles'>Get Articles</button>
       <div id='article-count'>
       </div>
-      <ul id='articles'>Articles
+      <ul id='articles' text='Articles'>
       </ul>
     </div>
+    <script src='js/jquery.js'></script>
+    <script src='js/ajax_globals_done.js'></script>
+    <script src='js/article.js'></script>
+    <script src='js/article_list.js'></script>
+    <script src='js/main.js'></script>
   </body>
 </html>
