added show button and now you can see the articles again after clicking show, would like to figure out a way to not have to use three buttons

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
       <button id='get-articles'>Get Articles</button>
       <button id='hide-articles'>Hide Articles</button>
+      <button id='show-articles'>Show Articles</button>
       <div id='article-count'>
       </div>
       <ul id='articles'>Articles
