figured it out using toggle

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
       </form>
 
       <button id='get-articles'>Get Articles</button>
-      <button id='hide-articles'>Hide Articles</button>
-      <button id='show-articles'>Show Articles</button>
+      <button id='show-hide-articles'>Show/Hide Articles</button>
       <div id='article-count'>
       </div>
       <ul id='articles'>Articles
