--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <link href="css/simple.css" rel="stylesheet" type="text/css" media="all">
     <script src='js/jquery.js'></script>
+    <script src='js/article.js'></script>
+    <script src='js/article_list.js'></script>
     <script src='js/main.js'></script>
   </head>
   <body>
