Followed along w Toms review

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
       </form>
 
       <button id='get-articles'>Get Articles</button>
-      <div id='article-count'>
-      </div>
-      <ul id='articles'>Articles
+      <p>Total number of articles:</p>
+      <div id='article-count'></div>
+
+      <ul id='articles'>
       </ul>
 
     </div>
